fixed spacing problem

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -14,21 +14,17 @@
   display: grid;
   grid-template-columns: 350px 1fr 1fr 1fr;
   grid-template-rows: 50% 50%;
-  min-height: 60vh;
   padding: 30px;
+  height: 62vh;
 }
-.profile-name {
+
+.profile-info {
   color: black;
-  font-weight: bolder;
-}
-.profile-email {
-  color: black;
-}
-.profile-dob {
-  color: black;
-}
-.profile h2 {
-  font-size: 22px;
+  font-size: 20px;
+  h2 {
+    font-size: 24px;
+    font-weight: bold;
+  }
 }
 
 .profile h3 {
@@ -36,7 +32,6 @@
   margin-bottom: 15px;
   color: black;
 }
-
 
 .card-shadow {
   background-image: linear-gradient(50deg, transparent 0%, rgba(0, 0, 0, 0.8) 60%);
